# predictive_maintenance

./: .gitignore  CMakeLists.txt
components/audio_processor/: CMakeLists.txt  audio_provider.cpp  command_responder.cpp  idf_component.yml  ringbuf.c
components/audio_processor/include/: audio_provider.h  command_responder.h  micro_model_settings.h
edge-impulse-sdk/cmake/: utils.cmake
main/: CMakeLists.txt  main.cpp  main_functions.cpp
main/include/: main_functions.h
model-parameters/: model_metadata.h  model_variables.h
tflite-model/: tflite_learn_4_compiled.cpp  tflite_learn_4_compiled.h
